fix: get detail booking
